--- a/src/main.scss
+++ b/src/main.scss
@@ -21,6 +21,8 @@ $title-color: $mongo-lead;
 $table-cell-border: none;
 $table-cell-padding: .2em;
 
+$navbar-burger-color: $mongo-smoke;
+
 // $family-primary: "courier";
 
 @import "../node_modules/bulma/sass/utilities/_all";
